alfred-api/k8s/alfred-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: alfred-deployment
    namespace: alfred
    labels:
        app: alfred
        tier: frontend
spec:
    replicas: 3
    selector:
        matchLabels:
            app: alfred
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 2
            maxUnavailable: 1
    template:
        metadata:
            labels:
                app: alfred
                tier: frontend
        spec:
            containers:
                - image: gcr.io/alfred-302520/alfred-api:0.2
                  #command: ["sleep 600"]
                  imagePullPolicy: IfNotPresent
                  name: alfred
                  resources: 
                    # limits:
                    #   cpu: 2000m
                    #   memory: 2000Mi
                    # requests:
                    #   cpu: 500m
                    #   memory: 300Mi
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
            dnsPolicy: ClusterFirst
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            terminationGracePeriodSeconds: 10
