alfred-api/k8s/alfred-api-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: alfred
    namespace: alfred
    labels:
        app: alfred
        tier: frontend
spec:
    type: NodePort
    ports:
        - port: 8000
    selector:
        app: alfred
        tier: frontend
