alfred-api/k8s/alfred-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: alfred-ssl-ingress
    namespace: alfred
    annotations:
        kubernetes.io/ingress.global-static-ip-name: alfred-ssl-ingress-ip
        networking.gke.io/managed-certificates: alfred-ssl-certificate
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        kubernetes.io/ingress.allow-http: "false"
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "240s"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "240s"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "240s"
        ingress.kubernetes.io/proxy-connect-timeout: "240s"
        ingress.kubernetes.io/proxy-send-timeout: "240s"
        ingress.kubernetes.io/proxy-read-timeout: "240s"
spec:
    rules:
        - host: alfredapi.alfreddelivery.com
          http:
              paths:
                  - backend:
                        serviceName: alfred
                        servicePort: 8000
